bzip2ida/g1/spec_init
/data/output_dir/patch/bzip2/ida/gcc/O1/bzip2-gcc-O1/spec_init/src/spec.c:570:37: error: use of undeclared identifier 'end'
while ( v0 != ( struct spec_fd_t *)&end ); 
                                    ^
1 error generated.
make: *** [/data/output_dir/patch/bzip2/ida/gcc/O1/bzip2-gcc-O1/spec_init/src/obj/spec.o] Error 1
